# py_temp

./: .gitignore  run.sh
.github/workflows/: publish.yml
EDA-Notebook/: iris_eda.ipynb
PKI_TLS/: READme.md  keytool_x25529.py  requirements.txt  run.sh  sign_keypair.py
contact_manager/: READme.md  contact.csv  contact.py  contact_book.py  requirements.txt
contact_manager/tests/: test_contactBook.py  tests.py
echo-server/: READme.md  async_echo.py  client.py  server.py
echo-server/tests/: test.py  test_async.py
packet-sniffer/: READme.md  sniffer.py
password-hasher/: READme.md  demo.py  hasher.py  requirements.txt  secure_hasher.py  secure_hasher2.py
password-hasher/tests/: test.py  test_argon.py
string_util/: LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
string_util/string_utils/: __init__.py  cli.py  normalize.py  validator.py
task_manager/: README.md  main.py  task.json
tutor/: docs.json  index_build.py  server.py  starcoder.py  web_version.py
web-vuln/: READme.md  app.py  clean.ps1  requirements.txt
web-vuln/templates/: add_cont_safe.html  add_cont_vuln.html  base.html  board_safe.html  board_vuln.html  csrf_attack_scenario.html  csrf_error.html  dump_users.html  index.html  login_safe.html  login_vuln.html  search_results.html  signup_safe.html  signup_vuln.html
